# qpcr-quality-control

./: .gitignore  AGENTS.md  README.md  RESULTS.md  Snakefile  VALIDATION.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
config/: model_v1.yaml  normalization_profiles.json
data/fixtures/: q4_curves.csv  q4_plate_meta.csv
data/raw/: manifest.csv  rdml_abi_7500.rdml  rdml_biorad_cfx96.rdml  rdml_roche_lc480.rdml
docs/: BUILD_TO_FINISH.md  architecture.md  data_sources.md  io_contract.md  stage_gate_log.md  workflow_mode.md
outputs/q1/: xml_parse_report.json
outputs/q4/: plate_qc_summary.json  q4_check_report.json  report.html  run_metadata.json
outputs/q6/: reproducibility_report.json
scripts/: deep_sweep.ps1  generate_q1_xml_parse_report.py  generate_q4_outputs.py  generate_q6_release_evidence.py  pre_push_check.ps1  run_contract_checks.py  run_repro_check.py  setup_git_hooks.ps1
src/: __init__.py  cli.py
src/core/: aggregate.py  features.py  hmm_infer.py  normalization_profiles.py  normalize.py  plate_layout.py  qc_rules.py  validate.py
src/export/: writers.py
src/io/: csv_loader.py  rdml_loader.py
src/report/: render.py
src/workflow/: __init__.py  aggregate_batch.py  batch_runner.py  manifest.py
tests/contract/: test_output_contract.py  test_schema_compatibility.py
tests/integration/: test_pipeline_cli.py  test_runtime_benchmark.py  test_snakemake_workflow.py
tests/unit/: test_aggregate.py  test_csv_loader.py  test_features.py  test_hmm_infer.py  test_normalization_profiles.py  test_normalize.py  test_plate_layout.py  (+7 more)
(+7 files in other folders)
