[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpcr-hmm-qc"
version = "0.1.0"
description = "Deterministic qPCR QC pipeline scaffold with HMM-style state calling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
qpcr-hmm-qc = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
